@startuml

top to bottom direction

class LoginController {

    login(LoginForm loginForm)
    logout(???)

}

class LoginService{
    
    login(String mailAdderess , String password)
    
}

class LoginMapper{
    
    login(String mailAdderess , String password)
    
}

class SignUpController{

    signUp(SignUpForm signUpForm)
    
}

class SignUpService{

    signUp(User user)
}

class SignUpMapper{

    signUp(User user)
}

class SignUpForm{

    String mailAdderess
    String password
    String name
    LocalDate dateOfBirth
    String gender
    String remarks
}

class User{

    Long id
    String mailAdderess
    String password
    String name
    LocalDate dateOfBirth
    Integer gender
    String remarks
    List<kakeibo> kakeiboList
}

class LoginForm{

    String mailAdderess
    String password

}






LoginController  ..>  LoginService 
LoginService  ..>  LoginMapper 
LoginController -- LoginForm
LoginController -- User

SignUpController  ..>  SignUpService 
SignUpService  ..>  SignUpMapper 
SignUpController -- SignUpForm
SignUpController -- User



@enduml